<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.MainEasynvestActivity">

    <TextView
        android:id="@+id/resultadoDaSimulacaoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/resultado_da_simulacao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalDaSimulacaoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textSize="40sp"
        tools:text="R$ 1.088,69"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultadoDaSimulacaoTV"
        />

    <TextView
        android:id="@+id/rendimentoTotalTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_goneMarginRight="16dp"
        android:layout_marginBottom="16dp"
        tools:text="Rendimento total de R$ 88,69"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="149dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalDaSimulacaoTV"
        android:layout_marginStart="8dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintValorAplicadoInicialmente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rendimentoTotalTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        >

        <TextView
            android:id="@+id/valorAplicadoInicialmenteTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_aplicado_inicialmente"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/valorAplicadoInicialmenteResultadoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="R$ 1.000,00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintValorBrutoDoInvestimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintValorAplicadoInicialmente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        >

        <TextView
            android:id="@+id/valorBrutoDoInvestimentoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_bruto_do_investimento"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/valorBrutoDoInvestimentoResultadoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="R$ 1.088,69"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintValorDoRendimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintValorBrutoDoInvestimento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        >

        <TextView
            android:id="@+id/valorDoRendimentoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_do_rendimento"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/valorDoRendimentoResultadoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="R$ 88,69"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintIrDoInvestimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintValorDoRendimento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        >

        <TextView
            android:id="@+id/irDoInvestimentoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ir_sobre_o_investimento"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/irDoInvestimentoResultadoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="R$ 15,52 [17,50%]"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintValorLiquidoDoInvestimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintIrDoInvestimento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        >

        <TextView
            android:id="@+id/valorLiquidoDoInvestimentoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_liquido_do_investimento"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/valorLiquidoDoInvestimentoResultadoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="R$ 1.073,17"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintDataDeResgate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintValorLiquidoDoInvestimento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        >

        <TextView
            android:id="@+id/dataDeResgateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_de_resgate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/dataDeResgateResultadoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="27/10/2018"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintDiasCorridos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintDataDeResgate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        >

        <TextView
            android:id="@+id/diasCorridosTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dias_corridos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/diasCorridosResultadoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="365"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintRendimentoMensal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintDiasCorridos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        >

        <TextView
            android:id="@+id/rendimentoMensalTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rendimento_mensal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/rendimentoMensalResultadoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0,57%"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintPercentualDoCdi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintRendimentoMensal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        >

        <TextView
            android:id="@+id/percentualDoCdiTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentual_do_cdi_do_investimento"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/percentualDoCdiResultadoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="123%"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintRentabilidadeAnual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintPercentualDoCdi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        >

        <TextView
            android:id="@+id/rentabilidadeAnualTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rentabilidade_anual"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/rentabilidadeAnualResultadoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="7,09%"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintRentabilidadeNoPeriodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintRentabilidadeAnual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        >

        <TextView
            android:id="@+id/rentabilidadeNoPeriodoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rentabilidade_anual"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/rentabilidadeNoPeriodoResultadoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="8,87%"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/botaoSimularNovamente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/simular_novamente"
        android:background="@drawable/roundbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintRentabilidadeNoPeriodo"
        />

</androidx.constraintlayout.widget.ConstraintLayout>